28 Aug 2008 - svn revision 688
[ Mobin Mohan <mobinmohan@gmail.com> ]
  	- Hindi theme added
     - Hindi po file contributed by Rajesh Ranjan <rajesh672@gmail.com>
     - Gujarati theme added
     - Gujarati po file contributed by Sweta Kothari <swkothar@redhat.com>

28 Aug 2008
[ Mobin Mohan <mobinmohan@gmail.com> ]
  	- Oriya theme added
     - Oriya po file contributed by Manoj Kumar Giri <giri.manojkr@gmail.com>

27 Aug 2008
[ Mobin Mohan <mobinmohan@gmail.com> ]
  	- Kannada theme added
     - Kannada po file contributed by Shankar Prasad <svenkate@redhat.com>

26 Aug 2008
[ Mobin Mohan <mobinmohan@gmail.com> ]
  	- Assamese theme added
     - Assamese po file contributed by Amitakhya Phukan <aphukan@redhat.com>
	- Tamil theme added
	- Tamil po file contributed by Felix I <ifelix25@gmail.com>

3 Aug 2008 - svn revision 599
[ Sreyas Kurumanghat <k.sreyas@gmail.com ]
	- Added keypress details for wrong key pressed in practice.

2008-07-09  gettextize  <bug-gnu-gettext@gnu.org>


3 Aug 2008 - svn revision 580
[ Sreyas Kurumanghat <k.sreyas@gmail.com ]
	- Added automatic keyboard layout generation in practice.c.
	- Modified the keyboard.lst file format. The current format can be any of the three below:
	- char
	- finger|char
	- finger|char|latin character
	- Features added so that the information about the keyboard gets updated each time the game is run.

13 Apr 2008 - svn revision 460
[ David Bruce <dbruce@tampabay.rr.com> ]
       - fixed small typo bug in alphabet.c (thanks Patrick Winnertz)

29 Mar 2008 - svn revision 451
[ David Bruce <dbruce@tampabay.rr.com> ]
       - new branch made called "tuxtype-new", code reorganized with
       - more standard subdirs "src", "data", "doc"; Makefile.am's
         and configure.ac updated accordingly.  After some tweaking,
         seems to work properly for configuration, "make", "make install",
         "make uninstall", "make distcheck" - and appears to run
         correctly on Linux.