@@ -301,7 +301,7 @@ on `(hostname || uname -n) 2>/dev/null | sed 1q`
 "
 
 # Files that config.status was made for.
-config_files=" Makefile po/Makefile.in data/Makefile data/fonts/Makefile data/images/Makefile data/images/backgrounds/Makefile data/images/cities/Makefile data/images/comets/Makefile data/images/hands/Makefile data/images/icons/Makefile data/images/keyboard/Makefile data/images/menu/Makefile data/images/status/Makefile data/images/tux/Makefile data/scripts/Makefile data/sounds/Makefile data/themes/Makefile data/themes/armenian/Makefile data/themes/armenian/images/Makefile data/themes/assamese/Makefile data/themes/assamese/words/Makefile data/themes/bokmal/Makefile data/themes/bokmal/words/Makefile data/themes/bokmal/images/Makefile data/themes/bokmal/images/status/Makefile data/themes/brazilian-portuguese/Makefile data/themes/brazilian-portuguese/images/Makefile data/themes/brazilian-portuguese/words/Makefile data/themes/catalan/Makefile data/themes/catalan/words/Makefile data/themes/czech/Makefile data/themes/czech/words/Makefile data/themes/dansk/Makefile data/themes/dansk/sounds/Makefile data/themes/dansk/words/Makefile data/themes/deutsch/Makefile data/themes/deutsch/words/Makefile data/themes/espanol/Makefile data/themes/espanol/images/Makefile data/themes/espanol/words/Makefile data/themes/euskara/Makefile data/themes/euskara/images/Makefile data/themes/euskara/words/Makefile data/themes/french/Makefile data/themes/french/words/Makefile data/themes/greek/Makefile data/themes/greek/words/Makefile data/themes/gujarati/Makefile data/themes/gujarati/words/Makefile data/themes/hindi/Makefile data/themes/hindi/words/Makefile data/themes/italian/Makefile data/themes/italian/images/Makefile data/themes/italian/words/Makefile data/themes/jamaican/Makefile data/themes/jamaican/images/Makefile data/themes/jamaican/words/Makefile data/themes/kannada/Makefile data/themes/kannada/words/Makefile data/themes/lithuanian/Makefile data/themes/lithuanian/images/Makefile data/themes/lithuanian/images/status/Makefile data/themes/lithuanian/sounds/Makefile data/themes/lithuanian/words/Makefile data/themes/malayalam/Makefile data/themes/malayalam/images/Makefile data/themes/malayalam/images/status/Makefile data/themes/malayalam/images/keyboard/Makefile data/themes/malayalam/scripts/Makefile data/themes/malayalam/words/Makefile data/themes/nederlands/Makefile data/themes/nederlands/words/Makefile data/themes/nepali/Makefile data/themes/nepali/words/Makefile data/themes/nynorsk/Makefile data/themes/nynorsk/images/Makefile data/themes/nynorsk/images/status/Makefile data/themes/nynorsk/words/Makefile data/themes/oriya/Makefile data/themes/oriya/words/Makefile data/themes/russian/Makefile data/themes/russian/images/Makefile data/themes/russian/images/status/Makefile data/themes/russian/words/Makefile data/themes/svenska/Makefile data/themes/svenska/words/Makefile data/themes/swahili/Makefile data/themes/swahili/words/Makefile data/themes/tamil/Makefile data/themes/tamil/words/Makefile data/themes/wolof/Makefile data/themes/wolof/images/Makefile data/themes/wolof/words/Makefile data/words/Makefile doc/Makefile doc/en/Makefile src/Makefile nsis/tuxtype.nsi tuxtype.spec"
+config_files=" Makefile po/Makefile.in data/Makefile data/fonts/Makefile data/images/Makefile data/images/backgrounds/Makefile data/images/cities/Makefile data/images/comets/Makefile data/images/hands/Makefile data/images/icons/Makefile data/images/keyboard/Makefile data/images/menu/Makefile data/images/status/Makefile data/images/tux/Makefile data/scripts/Makefile data/sounds/Makefile data/themes/Makefile data/themes/armenian/Makefile data/themes/armenian/images/Makefile data/themes/assamese/Makefile data/themes/assamese/words/Makefile data/themes/bokmal/Makefile data/themes/bokmal/words/Makefile data/themes/bokmal/images/Makefile data/themes/bokmal/images/status/Makefile data/themes/brazilian-portuguese/Makefile data/themes/brazilian-portuguese/images/Makefile data/themes/brazilian-portuguese/words/Makefile data/themes/catalan/Makefile data/themes/catalan/words/Makefile data/themes/czech/Makefile data/themes/czech/words/Makefile data/themes/dansk/Makefile data/themes/dansk/sounds/Makefile data/themes/dansk/words/Makefile data/themes/deutsch/Makefile data/themes/deutsch/words/Makefile data/themes/espanol/Makefile data/themes/espanol/images/Makefile data/themes/espanol/words/Makefile data/themes/euskara/Makefile data/themes/euskara/images/Makefile data/themes/euskara/words/Makefile data/themes/french/Makefile data/themes/french/words/Makefile data/themes/greek/Makefile data/themes/greek/words/Makefile data/themes/gujarati/Makefile data/themes/gujarati/words/Makefile data/themes/hindi/Makefile data/themes/hindi/words/Makefile data/themes/italian/Makefile data/themes/italian/images/Makefile data/themes/italian/words/Makefile data/themes/jamaican/Makefile data/themes/jamaican/images/Makefile data/themes/jamaican/words/Makefile data/themes/kannada/Makefile data/themes/kannada/words/Makefile data/themes/lithuanian/Makefile data/themes/lithuanian/images/Makefile data/themes/lithuanian/images/status/Makefile data/themes/lithuanian/sounds/Makefile data/themes/lithuanian/words/Makefile data/themes/malayalam/Makefile data/themes/malayalam/images/Makefile data/themes/malayalam/images/status/Makefile data/themes/malayalam/images/keyboard/Makefile data/themes/malayalam/scripts/Makefile data/themes/malayalam/words/Makefile data/themes/nederlands/Makefile data/themes/nederlands/words/Makefile data/themes/nepali/Makefile data/themes/nepali/words/Makefile data/themes/nynorsk/Makefile data/themes/nynorsk/images/Makefile data/themes/nynorsk/images/status/Makefile data/themes/nynorsk/words/Makefile data/themes/oriya/Makefile data/themes/oriya/words/Makefile data/themes/russian/Makefile data/themes/russian/images/Makefile data/themes/russian/images/status/Makefile data/themes/russian/words/Makefile data/themes/svenska/Makefile data/themes/svenska/words/Makefile data/themes/swahili/Makefile data/themes/swahili/words/Makefile data/themes/tamil/Makefile data/themes/tamil/words/Makefile data/themes/telugu/Makefile data/themes/telugu/words/Makefile data/themes/wolof/Makefile data/themes/wolof/images/Makefile data/themes/wolof/words/Makefile data/words/Makefile doc/Makefile doc/en/Makefile src/Makefile nsis/tuxtype.nsi tuxtype.spec"
 config_headers=" config.h"
 config_commands=" po-directories depfiles"
 
@@ -535,6 +535,8 @@ do
     "data/themes/swahili/words/Makefile") CONFIG_FILES="$CONFIG_FILES data/themes/swahili/words/Makefile" ;;
     "data/themes/tamil/Makefile") CONFIG_FILES="$CONFIG_FILES data/themes/tamil/Makefile" ;;
     "data/themes/tamil/words/Makefile") CONFIG_FILES="$CONFIG_FILES data/themes/tamil/words/Makefile" ;;
+    "data/themes/telugu/Makefile") CONFIG_FILES="$CONFIG_FILES data/themes/telugu/Makefile" ;;
+    "data/themes/telugu/words/Makefile") CONFIG_FILES="$CONFIG_FILES data/themes/telugu/words/Makefile" ;;
     "data/themes/wolof/Makefile") CONFIG_FILES="$CONFIG_FILES data/themes/wolof/Makefile" ;;
     "data/themes/wolof/images/Makefile") CONFIG_FILES="$CONFIG_FILES data/themes/wolof/images/Makefile" ;;
     "data/themes/wolof/words/Makefile") CONFIG_FILES="$CONFIG_FILES data/themes/wolof/words/Makefile" ;;
