@@ -1,3 +1,4 @@
+పొట్టి పదాలు
 ఆడు
 అంకు
 అంగీ
