@@ -1,3 +1,4 @@
+పెద్ద పదాలు
 ఆధోరణుడు
 అంగరక్ష
 అంతస్సు
