@@ -28,5 +28,6 @@ or
 sv
 sw
 ta
+te
 wo
 
