@@ -1,3 +1,8 @@
+28 Aug 2008 - svn revison 689
+[ Mobin Mohan <mobinmohan@gmail.com> ]
+  	- Telugu theme added
+     - Telugu po file contributed by Krishna Krothapalli <k.meetme@gmail.com>
+
 28 Aug 2008 - svn revision 688
 [ Mobin Mohan <mobinmohan@gmail.com> ]
   	- Hindi theme added
